Fix: tidy up some css as isn't being used and change padding on header to allow for change in font size so no gap between header and main.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -348,11 +348,7 @@ img {
 @media screen and (min-width: 1024px) {
 
     /* Header */
-    header {
-        padding: 4.5%;
-    }
-
-    
+       
 
     #menu {
         font-size: 24px;
@@ -369,10 +365,7 @@ img {
     #what {
         padding: 2% 5%;
     }
-    #jphistory {
-        background: url('../images/jphistory.png') no-repeat center center;
-        height: 70vh;      
-    }
+    
 
     #joinus {
         margin-top: 34px;
@@ -383,10 +376,9 @@ img {
 
     /* Header */
     header {
-        padding-bottom: 45px;
+        padding-bottom: 75px;
         padding-top: 45px;
-        background: url('../images/mclogo15.png') no-repeat center right/center ;
-        
+               
     }
 
     
@@ -411,7 +403,7 @@ img {
         background-color: rgba(161, 104, 104, 0.6);
         height: 50%;
         margin-top: 61px;
-        padding: 20%;
+        padding: 10%;
     }
 
     #timestable {
